# Minhavoz

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  audio.ts  cache.ts  settings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  openai.rs  secrets.rs  tts.rs
